# osx-system-agent

./: .gitignore  CLAUDE.md  QA_QC_REMEDIATION_PLAN_2026-03-05.md  README.md  pyproject.toml
.claude/: AUDIT.md  settings.json
.claude/hooks/: activate-venv.sh
.github/workflows/: ci.yml
actions/: action-plan-20260304.json  app-audit-triage-2026-03-04.json  execution-log-2026-03-04.txt  execution-log-action-plan-20260304.txt
src/osx_system_agent/: cli.py  config.py  doctor.py  log.py  renamer.py  schedule.py  undo.py
src/osx_system_agent/clean/: brew.py  caches.py  docker.py  duplicates.py  junk.py  trash.py  xcode.py
src/osx_system_agent/reports/: consolidated.py  history.py  html.py  markdown.py  user_files_html.py  writer.py
src/osx_system_agent/scanners/: __init__.py  aging.py  brew.py  caches.py  clutter.py  disk_hogs.py  disk_usage.py  docker.py  duplicates.py  filters.py  google_drive.py  inventory.py  junk.py  large_files.py  launch_agents.py  login_items.py  network.py  security.py  xcode.py
src/osx_system_agent/system/: activity.py  processes.py
src/osx_system_agent/utils/: human.py  parse.py  paths.py
tests/: conftest.py  test_brew_clean.py  test_caches.py  test_clean.py  test_clean_duplicates.py  test_cli.py  test_clutter.py  test_config.py  test_disk_hogs.py  test_disk_usage.py  test_docker.py  test_docker_clean.py  test_doctor.py  test_filters.py  test_google_drive.py  test_history.py  test_html_report.py  test_junk.py  test_large_files.py  test_launch_agents.py  test_network.py  test_renamer.py  test_reports.py  test_scanners.py  test_schedule.py  test_security.py  test_system.py  test_undo.py  test_user_files_html.py  test_utils.py  test_xcode.py  test_xcode_clean.py
