[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osx-system-agent"
version = "0.1.0"
description = "Local macOS system agent for monitoring and file hygiene."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["macos", "monitoring", "cleanup", "dedupe"]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
]

[project.scripts]
osa = "osx_system_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
